# trade_app

./: .gitignore  README.md  main.py  pyproject.toml
database/: files_db.py
database/files/: historical_data.csv  orders.csv  users.csv
graphs_data/: historical_data.py
strategies/: strategy.py
trade_platforms/: base.py
trade_platforms/binance_platf/: binance_conn.py
