[tool.poetry]
name = "trade-app"
version = "0.1.0"
description = ""
authors = ["jeSoosRemirez <dkhomych0091@gmail.com>"]
readme = "README.md"
packages = [{include = "trade_app"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
python-binance = "^1.0.19"
pandas = "^2.1.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
